# OpenGL

./: CMakeLists.txt  build.sh  test  test.cpp
include/: Shader.h  func.h  note.txt
res/shaders/: Basic.shader
src/: Application.cpp  glad.c  main.cpp
src/qingw/: Shader.cpp  func.cpp
